@@ -2,6 +2,9 @@ debhelper (7.4.20) UNRELEASED; urgency=low
 
   * Drop one more call to dpkg-architecture. Closes: #580837
     (Raphael Geissert)
+  * Further reduce the number of calls to dpkg-architecture to zero,
+    in a typical package with no explicit architecture mentions
+    in control file or debhelper config files.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 09 May 2010 11:44:58 -0400
 
